add tex function

--- a/LinearRegression/List1 - Regressao Linear.ipynb
+++ b/LinearRegression/List1 - Regressao Linear.ipynb
@@ -542,6 +542,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ \\beta_1 = \\frac{ \\sum_{i=1}^{n} (x_i - mean(x)) \\times (y_i - mean(y))}{\\sum_{i=1}^{n} (x_i - mean(x))^2} $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$ \\x08eta_1 = \\x0crac{ \\\\sum_{i=1}^{n} (x_i - mean(x)) \\times (y_i - mean(y))}{\\\\sum_{i=1}^{n} (x_i - mean(x))^2} $'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"$ \\beta_1 = \\frac{ \\sum_{i=1}^{n} (x_i - mean(x)) \\times (y_i - mean(y))}{\\sum_{i=1}^{n} (x_i - mean(x))^2} $\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
