add function for find value that house

--- a/LinearRegression/List 2 - Histogramas.ipynb
+++ b/LinearRegression/List 2 - Histogramas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -180,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hr = np.random.normal(loc=60, scale=10, size=5000)"
@@ -406,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ps = np.random.poisson(size=10000)"
@@ -464,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -507,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -518,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +531,7 @@
        "(100, 2)"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +848,7 @@
        "9           1700   255000"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,8 +872,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Convert pés quadrados a metros quadrados\n",
@@ -878,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -909,9 +915,9 @@
      "text": [
       "Inicia com b0 = 0, b1 = 0, error = 85342300000.0\n",
       "Executando...\n",
-      "Após 1000000 iterações, obtemos b0 = 62624.176018587714, b1 = 1393.7906695233057, error = 1430924448.291332\n",
-      "CPU times: user 26.9 s, sys: 240 ms, total: 27.2 s\n",
-      "Wall time: 27 s\n"
+      "Após 10000000 iterações, obtemos b0 = 98244.46650502208, b1 = 1181.5629466708376, error = 1366556523.1877294\n",
+      "CPU times: user 4min 54s, sys: 1.34 s, total: 4min 56s\n",
+      "Wall time: 4min 56s\n"
      ]
     }
    ],
@@ -920,8 +926,46 @@
     "learning_rate = 0.00001\n",
     "initial_b0 = 0 # y-intercept inicial\n",
     "initial_b1 = 0 # inclinação inicial\n",
-    "num_iterations = 1000000\n",
+    "num_iterations = 10000000\n",
     "error = run(Xc, yc, initial_b0, initial_b1, learning_rate, num_iterations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def gd(x): \n",
+    "    b0 = 98244.466\n",
+    "    b1 = 1181.562\n",
+    "    return b0 + b1 * x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "216400.666 é o valor da casa de 100m²\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('%.3f é o valor da casa de 100m²' % gd(100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Usando Linear Regression"
    ]
   },
   {
