preparando cross validate

--- a/Job Salary Prediction.ipynb
+++ b/Job Salary Prediction.ipynb
@@ -1592,39 +1592,63 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/unknown/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_split.py:605: Warning: The least populated class in y has only 1 members, which is too few. The minimum number of members in any class cannot be less than n_splits=10.\n",
-      "  % (min_groups, self.n_splits)), Warning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cross_validate(estimator=rf_model, X=X_std_train, y=y, cv=skfold)"
+    "cv_rf = cross_validate(estimator=rf_model, X=X_std_train, y=y, cv=skfold)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Teste"
+    "cv_gb = cross_validate(estimator=gb_model, X=X_std_train, y=y, cv=skfold)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Predição"
+    "cv_lgr = cross_validate(estimator=lgr_model, X=X_std_train, y=y, cv=skfold)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Exportar"
+    "cv_ada = cross_validate(estimator=ada_model, X=X_std_train, y=y, cv=skfold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_knn = cross_validate(estimator=knn_model, X=X_std_train, y=y, cv=skfold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_lnr = cross_validate(estimator=lnr_model, X=X_std_train, y=y, cv=skfold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_svr = cross_validate(estimator=svr_model, X=X_std_train, y=y, cv=skfold)"
    ]
   }
  ],
