--- a/Job_Salary_Prediction.ipynb
+++ b/Job_Salary_Prediction.ipynb
@@ -1009,30 +1009,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 300,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/unknown/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:189: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self._setitem_with_indexer(indexer, value)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# df_job_data['Company'].isna()\n",
-    "df_job_data['Company'].loc[df_job_data['Company'].isna()] = \"NULL\"\n",
-    "df_test_rev1['Company'].loc[df_test_rev1['Company'].isna()] = \"NULL\""
+    "df_job_data['Company'].replace(value='NULL', to_replace=np.nan, inplace=True)\n",
+    "df_test_rev1['Company'].replace(value='NULL', to_replace=np.nan, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1030,7 @@
        "       'National Army Museum', 'DMC Healthcare'], dtype=object)"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,66 +1041,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20813,)"
+      ]
      },
-     "base_uri": "https://localhost:8080/",
-     "height": 37
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 751,
-     "status": "ok",
-     "timestamp": 1529801121561,
-     "user": {
-      "displayName": "Gabriel Cesar",
-      "photoUrl": "//lh6.googleusercontent.com/-p5vDPiaCNfw/AAAAAAAAAAI/AAAAAAAAABs/bf-pbMKqe5c/s50-c-k-no/photo.jpg",
-      "userId": "109223051625932368282"
-     },
-     "user_tz": 180
-    },
-    "id": "RjY1lzucEwBo",
-    "outputId": "df57792a-2df7-4301-ded5-a2d2fcb5bcac"
-   },
-   "outputs": [],
+     "execution_count": 311,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# del df_job_data['Company']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 210,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     },
-     "base_uri": "https://localhost:8080/",
-     "height": 37
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 940,
-     "status": "ok",
-     "timestamp": 1529801123641,
-     "user": {
-      "displayName": "Gabriel Cesar",
-      "photoUrl": "//lh6.googleusercontent.com/-p5vDPiaCNfw/AAAAAAAAAAI/AAAAAAAAABs/bf-pbMKqe5c/s50-c-k-no/photo.jpg",
-      "userId": "109223051625932368282"
-     },
-     "user_tz": 180
-    },
-    "id": "AVXE3xOfEwBw",
-    "outputId": "b4dc0c4d-1fba-42f4-b72f-ba6e02bf255b"
-   },
-   "outputs": [],
-   "source": [
-    "# del df_test_rev1['Company']"
+    "df_job_data['Company'].unique().shape"
    ]
   },
   {
@@ -4894,8 +4837,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Trabalhar com textos nas features\n",
-    "- Saber quando remover um label"
+    "- Trabalhar com textos nas features do dataset.\n",
+    "- Substituir valores que estão faltando.\n",
+    "- Saber quando remover uma feature."
    ]
   },
   {
@@ -4910,7 +4854,7 @@
    "metadata": {},
    "source": [
     "- Utilização das ferramentas ja existentes para realizar atividades que seriam realizadas manualmente.\n",
-    "- Um pouco de conhecimento sobre como funciona uma predição baseada em textos."
+    "- Um pouco de conhecimento sobre como funciona uma predição onde as features contém textos."
    ]
   },
   {
@@ -4924,14 +4868,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O score que é retornada é, portanto, negativo quando o score deve ser minimizado e positivo se for um score que deva ser maximizado"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Portanto, minizar o score é uma melhoria futura."
+    "- O score que é retornada é, portanto, negativo quando o score deve ser minimizado e positivo se for um score que deva ser maximizado. Portanto, minizar o score é uma melhoria futura.\n",
+    "- Verificar o comportamento com as features que não foram utilizadas.\n",
+    "- Utilizar outros algoritmos para realizar a predição."
    ]
   }
  ],
